<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CL_ID_LAYOUT"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">

    <TextView
        android:id="@+id/txt_settings_test"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:background="#A4FFFFFF"
        android:gravity="center"
        android:text="@string/settings_test_note"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_font_default"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_weight="1"
        android:background="#A4FFFFFF"
        android:gravity="center"
        android:text="@string/font_default"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_settings_test" />

    <TextView

        android:id="@+id/txt_font_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_weight="1"
        android:background="#A4FFFFFF"
        android:gravity="center"
        android:text="@string/fonts"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_font_default" />

    <TextView

        android:id="@+id/txt_font_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_weight="1"
        android:background="#A4FFFFFF"
        android:gravity="center"
        android:text="@string/fonts"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_font_1" />

    <TextView

        android:id="@+id/txt_font_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_weight="1"
        android:background="#A4FFFFFF"
        android:gravity="center"
        android:text="@string/fonts"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_font_2" />

    <RadioGroup

        android:id="@+id/radioGroup1"
        android:layout_width="46dp"
        android:layout_height="125dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="48dp"
        android:background="#A4FFFFFF"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:weightSum="4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_settings_test">

        <RadioButton
            android:id="@+id/r_btn_font_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/r_btn_font_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/r_btn_font_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/r_btn_font_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </RadioGroup>

    <TextView

        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="28dp"
        android:background="#A4FFFFFF"
        android:gravity="center"
        android:text="@string/fonts13"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup2"
        app:layout_constraintTop_toBottomOf="@+id/txt_settings_test" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="28dp"
        android:background="#A4FFFFFF"
        android:gravity="center"
        android:text="@string/fonts17"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="28dp"
        android:background="#A4FFFFFF"
        android:gravity="center"
        android:text="@string/fonts20"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup2"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="45dp"
        android:layout_height="99dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="16dp"
        android:background="#A4FFFFFF"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_settings_test">

        <RadioButton
            android:id="@+id/r_btn_font_size_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/r_btn_font_size_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <RadioButton
            android:id="@+id/r_btn_font_size_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </RadioGroup>

    <Button
        android:id="@+id/save_settings"
        android:layout_width="117dp"
        android:layout_height="68dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="200dp"
        android:background="#A4FFFFFF"
        android:gravity="center"
        android:text="@string/btn_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_settings_test"
        app:layout_constraintVertical_bias="0.995" />
</android.support.constraint.ConstraintLayout>